maze.pledge.PledgeMaze.scala.error
Erreur de compilation :
PledgeMaze:50: error: ':' expected but ')' found.
  def isDirectionFree(dir) {
                         ^PledgeMaze:71: error: identifier expected but '}' found.
} 
^